[gd_scene load_steps=2 format=3 uid="uid://bj0ig06ffxs1p"]

[ext_resource type="Script" path="res://states/Dash.gd" id="1_n2hl3"]

[node name="Dash" type="Node"]
script = ExtResource("1_n2hl3")

[node name="DashDuration" type="Timer" parent="."]
one_shot = true

[node name="Ghost" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="Ghost" to="." method="_on_ghost_timeout"]
